# OuluWeather

./: CMakeLists.txt  Highlights.qml  HighlightsSwipe.qml  Main.qml  Overview.qml  Screen01.qml  TestOverview.qml  highlightsbackend.cpp  highlightsbackend.h  main.cpp  networkservice.cpp  networkservice.h  qtquickcontrols2.conf  resouces.qrc  stationforecastdata.cpp  stationforecastdata.h
